# replayless

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff-release.toml  cliff.toml  config.example.toml
.github/workflows/: build.yml  gui-windows.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  main.rs  ui.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: compress.rs  config.rs  encode.rs  estimate.rs  lib.rs  manifest.rs  paths.rs  preflight.rs  probe.rs  probe_cache.rs  proc.rs  progress.rs  scan.rs  tooling.rs
crates/core/src/drive/: mod.rs
crates/drive/: Cargo.toml
crates/drive/src/: auth.rs  lib.rs  upload.rs
crates/gui/: Cargo.toml  README.md  build.rs
crates/gui/src/: app.rs  fsnav.rs  main.rs
crates/gui/src/features/: mod.rs
crates/gui/src/features/folders/: mod.rs  view.rs
crates/gui/src/features/progress/: model.rs  view.rs
crates/gui/src/features/settings/: mod.rs  view.rs
crates/gui/src/shared/: assets.rs  mod.rs
crates/gui/src/shared/components/: card.rs  mod.rs  stat.rs  title_bar.rs
src/: cli.rs  compress.rs  config.rs  encode.rs  main.rs  manifest.rs  scan.rs
src/drive/: auth.rs  mod.rs  upload.rs
