[package]
name = "replayless"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "replayless"
path = "src/main.rs"

[dependencies]
replayless-core = { path = "../core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
