[package]
name = "replayless-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "replayless-gui"
path = "src/main.rs"

# Pinned to crates.io releases (not the Zed monorepo git dep): gpui-component
# 0.5.x depends on gpui ^0.2.2, so these resolve to a consistent set.
[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
# Bundled Lucide icon SVGs (status badges + title-bar window controls), served
# via our AssetSource in src/shared/assets.rs.
gpui-component-assets = "0.5.1"
replayless-core = { path = "../core" }
anyhow = "1"
futures = "0.3"
# Embeds the brand icon for the custom title bar into the binary.
rust-embed = "8"

# Embeds the application icon into the .exe on Windows (see build.rs). Keeps the
# build a single self-contained executable — the icon ships inside the binary.
[build-dependencies]
winresource = "0.1"
